--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,28 @@
-/* My Awesome Styles */
-
-/* Diagnostic Styling 
-  * Change Background Color
-  * Outline Elements
-*/
-
 * {
     outline: 1px dotted black;
+}
+
+
+/* Doodle Stage */
+
+#solar-system {
+    width: 20em;
+    height: auto;
+}
+
+#stage {
+    background: #ccc;
+    height: 300px;
+    width: 600px;
+}
+
+main {
+    text-align: center;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
