--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,18 @@
     position: relative;
 }
 
+.stars {
+    width: 28px;
+    height: 25px;
+}
+
 #G {
     position: absolute;
     top: 110px;
     right: 390px;
     z-index: 1;
+    width: 68px;
+    height: 70px;
 }
 
 #o-red {
@@ -64,6 +71,8 @@
     top: 15px;
     right: 10px;
     z-index: 1;
+    width: 167px;
+    height: 101px;
 }
 
 #brown-planet2 {
@@ -71,6 +80,8 @@
     top: 200px;
     right: 30px;
     z-index: 1;
+    width: 42px;
+    height: 41px;
 }
 
 #cosmonaut {
@@ -78,6 +89,8 @@
     top: 15px;
     right: 70px;
     z-index: 2;
+    width: 41px;
+    height: 46px;
 }
 
 #earth {
@@ -85,6 +98,8 @@
     top: 20px;
     right: 400px;
     z-index: 1;
+    width: 58px;
+    height: 57px;
 }
 
 #blue-planet {
@@ -92,8 +107,20 @@
     top: 200px;
     right: 505px;
     z-index: 1;
+    width: 75px;
+    height: 75px;
 }
 
 main {
     text-align: center;
+}
+
+#rocket {
+    width: 109px;
+    height: 57px;
+}
+
+#cosmonaut {
+    width: 41px;
+    height: 46px;
 }
